# logapi

./: .gitignore  README.md  config.py  dash_app.py  log.txt  logs.db  pyproject.toml  requirements.txt  run.py
app/: routes.py  utils.py
blueprint/: __init__.py
blueprint/db/: __init__.py  models.py
blueprint/getlogs/: __init__.py  route.py
blueprint/viewlogs/: __init__.py  route.py
templates/: error_distribution_chart.html  error_filter_sort.html  log_frequency.html
