[tool.poetry]
name = "logapi"
version = "0.1.0"
description = ""
authors = ["R4mbb <yong010301@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "3.0.3"
numpy = "1.24.4"
pandas = "1.5.3"
pysqlite3 = "0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
